# frames-diff

./: LICENSE  README.md  frames-diff.cabal  stack.yaml
Frames/: Default.hs  Diff.hs
Frames/Time/: Columns.hs  LocalTime.hs  TimeIn.hs
Frames/Time/CTime/: UnixTS.hs
Frames/Time/Chicago/: Columns.hs  TimeIn.hs
Frames/Time/LocalTime/: Columns.hs  TimeIn.hs
Frames/TimeIn/: Columns.hs  TimeIn.hs
bench/: Bench.hs
test/: Spec.hs  Test.hs
