name:                frames-diff
version:             0.1.0.0
synopsis:            Useful library to compare to producers using structural typing and lenses
description:         Please see README.md
homepage:            https://github.com/codygman/frames-diff#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Cody Goodman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Frames.Diff, Frames.Time.TimeIn, Frames.Time.Columns
  build-depends:       Frames
                     , base >= 4.7 && < 5
                     , containers
                     , foldl
                     , lens
                     , mtl >= 2.2.1
                     , pipes
                     , template-haskell >= 2.11.0.0
                     , text
                     , text-format
                     , time >= 1.6.0.1
                     , tz >= 0.1.2.0 && < 0.2.0.0
                     , vinyl

  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       DataCSV PrettyTH Temp
  build-depends:       base, text, hspec, Frames, template-haskell,
                       temporary, directory, htoml, regex-applicative, pretty,
                       unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/frames-diff
