name:                frames-diff
version:             0.1.0.0
synopsis:            Useful library to compare to producers using structural typing and lenses
description:         Please see README.md
homepage:            https://github.com/codygman/frames-diff#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Cody Goodman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Frames.Diff
                     , Frames.Default
                     , Frames.Time.Chicago.TimeIn
                     , Frames.Time.Chicago.Columns
                     , Frames.Time.LocalTime
  build-depends:       Frames
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , containers
                     , foldl
                     , hashable >= 1.2.4.0
                     , lens
                     , mtl >= 2.2.1
                     , pipes
                     , primitive >= 0.6.1.0
                     , readable >= 0.3.1
                     , template-haskell >= 2.11.0.0
                     , text
                     , text-format
                     , time
                     , thyme
                     , time-lens >= 0.4.0.1
                     , tz >= 0.1.2.0 && < 0.2.0.0
                     , unordered-containers >= 0.2.7.1
                     , vector >= 0.11.0.0
                     , vinyl
                     , old-locale

  default-language:    Haskell2010

Test-Suite test-frames-diff
    type:       exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:    Test.hs
    build-depends: QuickCheck >= 2.8.2
                 , base
                 , frames-diff
                 , hspec
                 , hspec-expectations
                 , quickcheck-instances >= 0.3.12
                 , thyme
                 , Frames


source-repository head
  type:     git
  location: https://github.com/githubuser/frames-diff
